--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -90,12 +90,24 @@
 																
 																<tr>
 																	<td th:if="${accreditamentoWrapper.legaleRappresentante != null}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/edit|}"></a></td>
-																	<td th:if="${accreditamentoWrapper.legaleRappresentante == null}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=LEGALE_RAPPRESENTANTE|}"></a></td>
+																	<td th:if="${accreditamentoWrapper.legaleRappresentante == null}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=LEGALE_RAPPRESENTANTE|}"></a></td>
 																
-																	<td	th:if="(not ${accreditamentoWrapper.legaleRappresentanteStato} and not ${accreditamentoWrapper.DelegatoLegaleRappresentanteStato})">
+																	<td	th:unless="${accreditamentoWrapper.legaleRappresentanteStato}">
 																		<span class="fa fa-remove red"></span>
 																	</td>
-																	<td	th:if="${accreditamentoWrapper.legaleRappresentanteStato} or ${accreditamentoWrapper.delegatoLegaleRappresentanteStato}">
+																	<td	th:if="${accreditamentoWrapper.legaleRappresentanteStato}">
+																		<span class="fa fa-check green"></span>
+																	</td>
+																</tr>
+																
+																<tr th:if="${accreditamentoWrapper.provider.tipoOrganizzatore.tipoP}">
+																	<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/edit|}"></a></td>
+																	<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante == null}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=DELEGATO_LEGALE_RAPPRESENTANTE|}"></a></td>
+																
+																	<td	th:unless="${accreditamentoWrapper.delegatoLegaleRappresentanteStato}">
+																		<span class="fa fa-remove grey" th:title="#{label.facoltativo}"></span>
+																	</td>
+																	<td	th:if="${accreditamentoWrapper.delegatoLegaleRappresentanteStato}">
 																		<span class="fa fa-check green"></span>
 																	</td>
 																</tr>
