--- a/src/main/resources/templates/sede/sedeFragment.html
+++ b/src/main/resources/templates/sede/sedeFragment.html
@@ -35,7 +35,7 @@
 							<label class="control-label col-xs-1" th:text="${++counter}">1</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="provincia_sede"><span th:text="#{label.provincia}">Provincia</span><span class="required">*</span></label>
-							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !#list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<select id="provincia_sede" class="form-control required" th:field="${sedeWrapper.sede.provincia}">
 		                          			<option value="" th:text="#{label.seleziona}">label.seleziona</option>
@@ -43,7 +43,7 @@
 		                        	</select>
 							  	</div>
 							</th:block>
-							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or #list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<label id="provincia_sede_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 										th:text="${sedeWrapper.sede.provincia}"></label>
@@ -57,14 +57,14 @@
 							<label class="control-label col-xs-1" th:text="${++counter}">2</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="comune_sede"><span th:text="#{label.comune}">Comune</span><span class="required">*</span></label>
-							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !#list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<select id="comune_sede" class="form-control required" th:field="${sedeWrapper.sede.comune}">
 										<option th:value="${sedeWrapper.sede.comune}" th:text="${sedeWrapper.sede.comune}"/>
 		                        	</select>
 							  	</div>
 							</th:block>
-							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or #list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<label id="comune_sede_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 										th:text="${sedeWrapper.sede.comune}"></label>
@@ -78,14 +78,14 @@
 							<label class="control-label col-xs-1" th:text="${++counter}">3</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="indirizzo_sede"><span th:text="#{label.indirizzo}">Indirizzo</span><span class="required">*</span></label>
-							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !#list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<input id="indirizzo_sede" name="indirizzo_sede"
 										required="required" class="form-control col-md-7 col-xs-12"
 										type="text" th:field="${sedeWrapper.sede.indirizzo}" />
 								</div>
 							</th:block>
-							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or #list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<label id="indirizzo_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 										th:text="${sedeWrapper.sede.indirizzo}"></label>
@@ -99,14 +99,14 @@
 							<label class="control-label col-xs-1" th:text="${++counter}">4</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="CAP_sede"><span th:text="#{label.cap}">CAP</span><span class="required">*</span></label>
-							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !#list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<select id="CAP_sede" class="form-control required" th:field="${sedeWrapper.sede.cap}">
 										<option th:value="${sedeWrapper.sede.cap}" th:text="${sedeWrapper.sede.cap}"/>
 		                        	</select>
 								</div>
 							</th:block>
-							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or #list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<label id="CAP_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 										th:text="${sedeWrapper.sede.cap}"></label>
@@ -120,14 +120,14 @@
 							<label class="control-label col-xs-1" th:text="${++counter}">5</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="telefono_sede"><span th:text="#{label.telefono}">Telefono</span><span class="required">*</span></label>
-							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !#list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<input id="telefono_sede" name="telefono_sede"
 										required="required" class="form-control col-md-7 col-xs-12"
 										type="tel" th:field="${sedeWrapper.sede.telefono}"/>
 								</div>
 							</th:block>
-							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or #list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<label id="telefono_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 										th:text="${sedeWrapper.sede.telefono}"></label>
@@ -141,13 +141,13 @@
 							<label class="control-label col-xs-1" th:text="${++counter}">7</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="fax_sede"><span th:text="#{label.fax}">FAX</span><span class="required">*</span></label>
-							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !#list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<input id="fax_sede" name="fax_sede" required="required"
 										class="form-control col-md-7 col-xs-12" type="tel" th:field="${sedeWrapper.sede.fax}" />
 								</div>
 							</th:block>
-							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or #list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<label id="fax_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 										th:text="${sedeWrapper.sede.fax}"></label>
@@ -161,14 +161,14 @@
 							<label class="control-label col-xs-1" th:text="${++counter}">8</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
 								for="email_sede"><span th:text="#{label.email}">E-mail</span><span class="required">*</span></label>
-							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !#list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${editabile and #lists.contains(sedeWrapper.idEditabili, counter) and !coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<input id="email_sede" name="email_sede"
 										required="required" class="form-control col-md-7 col-xs-12"
 										type="email" th:field="${sedeWrapper.sede.email}"/>
 								</div>
 							</th:block>
-							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or #list.contains(sedeWrapper.idEditabili, 0)}">
+							<th:block th:if="${!editabile or !#lists.contains(sedeWrapper.idEditabili, counter) or coincide}">
 								<div class="col-md-4 col-sm-4 col-xs-12">
 									<label id="email_sede" class="form-control form-disabled-text left-align col-md-7 col-xs-12"
 										th:text="${sedeWrapper.sede.email}"></label>
