--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -41,7 +41,7 @@
 							<div class="col-md-4 col-sm-4 col-xs-12">
 								<div class="checkbox">
 									<input id="isCoordinatore_comitato" name="isCoordinatore_comitato"
-										class="flat" type="checkbox" th:field="${personaWrapper.persona.coordinatoreComitatoScientifico}" th:disabled="${!editabile}" />
+										class="flat" type="checkbox" th:field="${personaWrapper.persona.coordinatoreComitatoScientifico}" th:disabled="${!editabile or #lists.isEmpty(personaWrapper.idEditabili)}" />
 								</div>
 							</div>
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.coordinatoreComitatoScientifico')}" class="alert" th:errors="${personaWrapper.persona.coordinatoreComitatoScientifico}"></div>
@@ -69,7 +69,7 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.cognome')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.cognome}"></div>
 						</div>
 
-						<!-- nome -->
+						<!-- NOME -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.nome')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">2</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
@@ -90,7 +90,7 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.nome')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.nome}"></div>
 						</div>
 
-						<!-- codice fiscale -->
+						<!-- CODICE FISCALE -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.codiceFiscale')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">3</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
@@ -111,7 +111,7 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.codiceFiscale')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.codiceFiscale}"></div>
 						</div>
 
-						<!-- checkbox flag straniero -->
+						<!-- CHECKBOX FLAG STRANIERO -->
 						<div th:if="${personaWrapper.persona.coordinatoreComitatoScientifico} or
 									${personaWrapper.persona.componenteComitatoScientifico}"
 							class="item form-group">
@@ -135,7 +135,7 @@
 							</th:block>
 						</div>
 
-						<!-- telefono -->
+						<!-- TELEFONO -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.telefono')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">4</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
@@ -156,7 +156,7 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.telefono')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.telefono}"></div>
 						</div>
 
-						<!-- cellulare -->
+						<!-- CELLULARE -->
 						<div th:unless="${personaWrapper.persona.responsabileSegreteria} or
 										${personaWrapper.persona.responsabileFormazione} or
 										${personaWrapper.persona.responsabileSistemaInformatico} or
@@ -181,7 +181,7 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.cellulare')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.cellulare}"></div>
 						</div>
 
-						<!-- email -->
+						<!-- EMAIL -->
 						<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.email')} ? 'bad'">
 							<label class="control-label col-xs-1" th:text="${counter != null ? ++counter : ''}">6</label>
 							<label class="control-label col-md-3 col-sm-3 col-xs-11"
@@ -202,7 +202,7 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.email')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.email}"></div>
 						</div>
 
-						<!-- posta elettronica certificata (PEC) -->
+						<!-- POSTA ELETTRONICA CERTIFICATA (PEC) -->
 						<div th:if="${personaWrapper.persona.legaleRappresentante} or
 									${personaWrapper.persona.delegatoLegaleRappresentante}"
 							class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.persona.anagrafica.pec')} ? 'bad'">
@@ -225,7 +225,7 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.anagrafica.pec')}" class="alert" th:errors="${personaWrapper.persona.anagrafica.pec}"></div>
 						</div>
 
-						<!-- professione -->
+						<!-- PROFESSIONE -->
 						<div th:if="${personaWrapper.persona.coordinatoreComitatoScientifico} or
 									${personaWrapper.persona.componenteComitatoScientifico} or
 									${personaWrapper.persona.responsabileSistemaInformatico} or
@@ -251,19 +251,19 @@
 							<div th:if="${#fields.hasErrors('personaWrapper.persona.professione')}" class="alert" th:errors="${personaWrapper.persona.professione}"></div>
 						</div>
 
-						<!-- allegato 1 (atto di nomina) -->
+						<!-- ALLEGATO 1 (ATTO DI NOMINA) -->
 						<div th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${counter != null ? ++counter : null}, null, true, ${editabile})" ></th:block>
 						</div>
 
-						<!-- allegato 2 (curriculum vitae) -->
+						<!-- ALLEGATO 2 (CURRICULUM VITAE) -->
 						<div th:unless="${personaWrapper.persona.legaleRappresentante}">
 							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${counter != null ? ++counter : null}, null, true, ${editabile})"></th:block>
 						</div>
 
-						<!-- allegato 3 (delega) -->
+						<!-- ALLEGATO 3 (DELEGA) -->
 						<div th:if="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div class="divider-dashed"></div>
 							<th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${counter != null ? ++counter : null}, null, true, ${editabile})"></th:block>
